# python-dsff

./: .coveragerc  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi-publish.yml  python-package.yml
docs/: mkdocs.yml
docs/pages/: index.md  usage.md
dsff/: __common__.py  __init__.py  arff.py  csv.py  dataset.py
src/dsff/: __common__.py  __info__.py  __init__.py  arff.py  csv.py  dataset.py  db.py
src/dsff/formats/: __common__.py  __init__.py  arff.py  csv.py  dataset.py  db.py  pa.py
tests/: test_dsff.py  utils.py
