[metadata]
name = dsff
version = file: dsff/VERSION
author = Alexandre D'Hondt
author_email = alexandre.dhondt@gmail.com
url = https://github.com/packing-box/python-dsff
description = DataSet File Format (DSFF)
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    programming
    dataset-file-format
    dsff
license = GPLv3
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
install_requires =
    openpyxl
setup_requires = setuptools
python_requires = >=3.6.*,<4
